# TMathX

./: CMakeLists.txt  README.md  main.cpp
include/glb/: glb.hpp
include/glb/internal/: definitions.hpp  hash.hpp  setup.hpp  type_mat.hpp  type_mat.inl  type_quat.hpp  type_quat.inl  type_vec.hpp  type_vec.inl
include/glb/mat/: clip_space.hpp  functions.hpp  geometric.hpp  inverse.hpp  mat2x2_type.hpp  mat3x3_type.hpp  mat4x4_type.hpp  mat_type.hpp  rotation.hpp  scale.hpp  transform.hpp  translate.hpp  util.hpp  view.hpp
include/glb/math/: bit.hpp  common.hpp  constants.hpp  exponential.hpp  functions.hpp  interpolation.hpp  trigonometric.hpp
include/glb/quat/: euler.hpp  exponential.hpp  functions.hpp  geometric.hpp  interpolation.hpp  quat_type.hpp  rotation.hpp  util.hpp
include/glb/vec/: common.hpp  exponential.hpp  functions.hpp  geometric.hpp  interpolation.hpp  relational.hpp  trigonometric.hpp  util.hpp  vec2_type.hpp  vec3_type.hpp  vec4_type.hpp  vec_type.hpp
include/tmx/internal/: definitions.hpp  setup.hpp  type_mat.hpp  type_mat.inl  type_quat.hpp  type_quat.inl  type_vec.hpp  type_vec.inl
include/tmx/mat/: clip_space.hpp  functions.hpp  geometric.hpp  inverse.hpp  mat2x2_type.hpp  mat3x3_type.hpp  mat4x4_type.hpp  mat_type.hpp  rotate.hpp  scale.hpp  transform.hpp  translate.hpp  view.hpp
include/tmx/math/: common.hpp  constants.hpp  exponential.hpp  functions.hpp  interpolation.hpp  trigonometric.hpp
include/tmx/quat/: angle.hpp  functions.hpp  interpolation.hpp  quat_type.hpp
include/tmx/vec/: casting.hpp  common.hpp  exponential.hpp  (+7 more)
(+100 files in other folders)
